# nfac-hws

./: poetry.py  pyproject.toml  test.py  test_poetry.py
hw15/: hw.py
hw16/: hw.py
hws/: db_script.py
hws/db_repository/: asyncpg_repository.py  base_repository.py  main.py
hws/fastapi_crudTask/: student.py
hws/hw_back2/: cars.py  users.py
hws/hw_back3/: main.py
hws/hw_back3/templates/: new.html  search.html
hws/hw_back4/: main.py
hws/hw_back4/templates/: book_detail.html  books.html  new_book.html
hws/hw_back4/templates/books/: detail.html  index.html  new.html
hws/hw_back5/: main.py
hws/hw_back5/myenv/: pyvenv.cfg
hws/hw_back5/templates/: edit_book.html
hws/hw_back6/: main.py  models.py
hws/hw_back6/repositories/: flowers_repository.py  purchase_repository.py  users_repository.py
hws/hw_back6/static/: styles.css
hws/hw_back6/templates/: cart.html  flowers.html  login.html  profile.html  purchased.html  signup.html
hws/hw_back7/: main.py
hws/hw_back8/: .gitignore  alembic.ini  database.db
hws/hw_back8/alembic/: env.py
hws/hw_back8/alembic/versions/: 0c11ab502717_create_users_flowers_and_purchases_.py
hws/hw_back8/app/: database.db  database.py  flowers_repository.py  main.py  purchase_repository.py  users_repository.py
lectures/: async_prog.py
lectures/OOP/: Repository.py
