[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 110
fix = true
select = ["E", "F", "W", "C", "D", "I", "N", "Q"]
ignore = ["D203", "D213", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.isort]
combine-as-imports = true

[tool.ruff.per-file-ignores]
"*/tests/*.py" = ["D", "E501"]
"*/migrations/*.py" = ["ALL"]
[project]
name = "hws"
version = "0.1.0"
description = ""
authors = [
    {name = "Nurtas",email = "nurtasmuhanbetov91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
